--- a/style.css
+++ b/style.css
@@ -212,8 +212,8 @@ header .navbar ul li a:hover {
   z-index: 1;
 }
 .home .image img {
-  width: 100%;
-  height: 100%;
+  width: 70%;
+  height: 70%;
   margin-top: 5rem;
   margin-left: 6rem;
   border-radius: 2%;
@@ -366,7 +366,7 @@ header .navbar ul li a:hover {
 }
 .about .row .image img {
   margin: 1rem;
-  width: 100%;
+  width: 300px;
   height: 400px;
   border-radius: 5%;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
